Refactoring Services(#26)
Refactored Supplier, SupplierContact, Facility, Equipment, Storage services